--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^3.5.0",
+    "cookie-session": "^1.3.1",
+    "es6-promisify": "^5.0.0",
     "express": "^4.15.4",
     "mongoose": "4.1.9",
     "nodemon": "^1.11.0",
