--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,9 @@
+.idea
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+.idea/workspace
 
 # testing
 /coverage
